# agentic-research

./: .gitignore  README.md  main.py  pyproject.toml
src/deep_research_workflow/: data_structures.py  models.py  nodes.py  prompts.py
